force-app/main/default/objects/ccrz__E_SiteIndex__c/ccrz__E_SiteIndex__c.object-meta.xml
<CustomObject>
    <description>A hashed directory of SEO friendly URLs and BreadCrumb data.</description>
    <label>CC Site Index</label>
    <nameField>
        <displayFormat>I-{000000000}</displayFormat>
        <label>CC Site Index Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Site Indices</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>