force-app/main/default/objects/ccrz__E_SiteIndex__c/fields/ccrz__Active__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Active flag to indicate if Site Index record is in use. When creation of Site Index records is completed by the batch job, all old values will be disabled and removed.</description>
    <inlineHelpText>Active flag to indicate if Site Index record is in use by the Storefront.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>