force-app/main/default/objects/ccrz__E_SiteIndex__c/fields/ccrz__Breadcrumb__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Breadcrumb__c</fullName>
    <description>A flat JSON Breadcrumb structure containing the Category and all parent Categories.</description>
    <inlineHelpText>A flat JSON Breadcrumb structure containing the Category and all parent Categories.</inlineHelpText>
    <label>Breadcrumb</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>