force-app/main/default/objects/ccrz__E_SiteIndex__c/fields/ccrz__Category__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Category to which this Index applies.</description>
    <label>Category</label>
    <referenceTo>ccrz__E_Category__c</referenceTo>
    <relationshipLabel>CC Site Indicies</relationshipLabel>
    <relationshipName>CCSiteIndicies</relationshipName>
    <type>Lookup</type>
</CustomField>