force-app/main/default/objects/ccrz__E_SiteIndex__c/fields/ccrz__FriendlyURLHash__c.field-meta.xml
<CustomField>
    <fullName>ccrz__FriendlyURLHash__c</fullName>
    <description>Indexed MD5 hash of the Friendly URL.</description>
    <externalId>true</externalId>
    <inlineHelpText>Indexed MD5 hash of the Friendly URL.</inlineHelpText>
    <label>Friendly URL Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>