force-app/main/default/objects/ccrz__E_SiteIndex__c/fields/ccrz__SiteIndexId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SiteIndexId__c</fullName>
    <description>External Id &amp; Unique Identifier to uniquely identify Site Index records.</description>
    <externalId>true</externalId>
    <inlineHelpText>External Id &amp; Unique Identifier to uniquely identify Site Index records.</inlineHelpText>
    <label>Site Index Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>